spacing bug fix

--- a/style/desktop.css
+++ b/style/desktop.css
@@ -50,7 +50,6 @@ a {
     line-height: 1.75;
     text-decoration: none;
     color: rgb(50, 0, 110);
-    display: inline-block;
 }
 
 .cleanul {
@@ -98,7 +97,6 @@ td {
     line-height: 1;
     font-weight: 350;
     color: rgb(196, 18, 48);
-    display: inline-block;
 }
 
 .cmucoursetitle:hover {
